# workflows

./: .bumpversion.cfg  .editorconfig  .gitignore  .isort.cfg  .mailmap  .mega-linter.yml  README.md  build-requirements.txt  changelog-requirements.txt  changelog.md  claude.md  format-python-requirements.txt  lychee.toml  metadata-requirements.txt  nuitka-requirements.txt  pipdeptree-requirements.txt  pyproject.toml  readme.md  renovate.json5  requirements.txt  yamllint-requirements.txt  zizmor.yaml
.claude/: package-skills.sh
.claude/agents/: grunt-qa.md  qa-engineer.md  sphinx-docs.md
.claude/docs/: operation-contracts.md
.cspell/: common-settings.yml  cspell.config.yml  ignore-filenames.txt  ignore-words.txt
.github/: bumpversion.toml  code-of-conduct.md  dependabot.yaml  dependabot.yml  labeller-content-based.yaml  labeller-file-based.yaml  labels-awesome.yaml  labels.json  labels.toml  labels.yaml  mega-linter-shared.yml  metadata.py  poetry_metadata.py  prepare_release.sh  python_metadata.py  update_changelog.py  update_mailmap.py
.github/.cspell/: cspell.config.yml  ignore-filenames.txt  ignore-words.txt
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/linters/: .ecrc  .gitleaks.toml  .golangci.yml  .grype.yaml  .hadolint.yaml  .isort.cfg  .markdown-link-check.json  .prettierrc.yaml  .pylintrc  .vale.ini  actionlint.yml  pyproject.toml  revive.toml
.github/workflows/: autofix.yaml  autolock.yaml  benchmarks.yaml  cancel-runs.yaml  changelog.yaml  clean-logs.yml  codeql.yml  debug-matrix.yml  debug-rasa.yml  debug.yaml  dependabot.yml  docs.yaml  label-sponsors.yaml  labeller-content-based.yaml  labeller-file-based.yaml  labels.yaml  lint.yaml  mega-linter.yml  pydeps.yml  release.yaml  renovate.yaml  tagging.yaml  tests.yaml  toc.yml  unsubscribe.yaml  update-checksums.yaml
docs/: agents.md  benchmark.md  cli-parameters.md  cli.md  code-of-conduct.md  conf.py  configuration.md  contributing.md  dependencies.md  docs_update.py  index.md  install.md  license.md  myst-docstrings.md  operation-contracts.md  repomatic.data.awesome_template.md  repomatic.data.md  repomatic.github.md  repomatic.md  repomatic.templates.md  security.md  skills.md  tests.md  todolist.md  tool-runner.md  upstream-development.md  workflows.md
docs/_static/: custom.css
docs/assets/: dependencies.mmd
docs/specs/: tool-runner.md
gha_utils/: __init__.py  __main__.py  binary.py  broken_links.py  bumpversion.py  bundled_config.py  changelog.py  checksums.py  cli.py  deps_graph.py  git_ops.py  github.py  init_project.py  issue.py  labels.py  lint_repo.py  mailmap.py  matrix.py  metadata.py  pr_body.py  release_prep.py  renovate.py  sphinx_linkcheck.py  sponsor.py  test_plan.py  testing.py  update_mailmap.py  version_config.py  workflow_sync.py  workflows.py
gha_utils/data/: __init__.py  autofix.yaml  autolock.yaml  bumpversion.toml  cancel-runs.yaml  changelog.yaml  debug.yaml  labels.toml  labels.yaml  mypy.toml  pytest.toml  release.yaml  renovate.json5  ruff.toml  skill-gha-changelog.md  skill-gha-deps.md  skill-gha-init.md  skill-gha-lint.md  skill-gha-metadata.md  skill-gha-release.md  skill-gha-sync.md  skill-gha-test.md  zizmor.yml
gha_utils/github/: issue.py  matrix.py  pr_body.py  workflow_sync.py
gha_utils/templates/: bump-version.md  detect-squash-merge.md  fix-typos.md  format-json.md  format-markdown.md  format-pyproject.md  format-python.md  lint-changelog.md  pr-metadata.md  prepare-release.md  release-notes.md  setup-guide.md  sync-bumpversion.md  sync-gitignore.md  sync-linter-configs.md  sync-mailmap.md  sync-renovate.md  sync-uv-lock.md  sync-workflows.md  update-deps-graph.md  update-docs.md  update-gitignore.md  update-mailmap.md
repokit/: __init__.py  __main__.py  broken_links.py  changelog.py  cli.py  init_project.py  lint_repo.py  metadata.py  release_prep.py  renovate.py
repokit/data/: __init__.py  bumpversion.toml  lint.yaml  mypy.toml  pytest.toml  renovate.json5  ruff.toml  skill-repokit-changelog.md  skill-repokit-deps.md  skill-repokit-init.md  skill-repokit-lint.md  skill-repokit-metadata.md  skill-repokit-release.md  skill-repokit-sync.md  skill-repokit-test.md  tests.yaml
repokit/github/: issue.py  pr_body.py  workflow_sync.py
repokit/templates/: __init__.py  bump-version.md  detect-squash-merge.md  fix-typos.md  format-json.md  format-markdown.md  format-pyproject.md  format-python.md  prepare-release.md  refresh-tip.md  sync-bumpversion.md  sync-gitignore.md  sync-linter-configs.md  sync-mailmap.md  sync-renovate.md  sync-uv-lock.md  sync-workflows.md  update-deps-graph.md  update-docs.md
repomatic/: __init__.py  __main__.py  binary.py  broken_links.py  cache.py  changelog.py  checksums.py  cli.py  config.py  deps_graph.py  git_ops.py  images.py  init_project.py  lint_repo.py  mailmap.py  metadata.py  myst_converter.py  myst_docstrings.py  prebake.py  pypi.py  pyproject.py  registry.py  release_prep.py  renovate.py  rst_to_myst.py  sponsor.py  test_matrix.py  test_plan.py  tool_runner.py  uv.py  virustotal.py
repomatic/data/: docs.yaml  (+40 more)
requirements/: autopep8.txt  blacken-docs.txt  build.txt  bump-my-version.txt  changelog.txt  format-python.txt  gha-utils.txt  mdformat.txt  metadata.txt  mypy.txt  nuitka.txt  pipdeptree.txt  ruff.txt  uv.txt  yamllint.txt
tests/: cli-test-plan.yaml  conftest.py  test_advisories.py  test_awesome_template.py  test_benchmarks.py  test_binary.py  test_broken_links.py  test_bumpversion.py  test_bundled_config.py  test_cache.py  test_changelog.py  test_checksums.py  test_deps_graph.py  test_dev_release.py  test_gh.py  test_git_ops.py  test_help.py  test_images.py  test_init_project.py  test_lint_repo.py  test_mailmap.py  test_matrix.py  test_metadata.py  test_myst_docstrings.py  test_platform_keys.py  test_pr_body.py  test_prebake.py  test_pypi.py  test_pyproject.py  test_readme.py  test_release_prep.py  test_release_sync.py  test_renovate.py  test_sphinx_linkcheck.py  test_sync_linter_configs.py  test_sync_renovate.py  test_sync_zizmor.py  test_tool_runner.py  test_virustotal.py  test_workflow_sync.py  (+1 more)
(+121 files in other folders)
