[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "gha-utils"
version = "5.2.0"
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">= 3.10"
description = "⚙️ CLI helpers for GitHub Actions + reusable workflows"
authors = [{ name = "Kevin Deldycke", email = "kevin@deldycke.com" }]
readme = "readme.md"
license = "GPL-2.0-or-later"
license-files = ["license"]
keywords = [
    'build-automation',
    'changelog-formatter',
    'ci-cd',
    'cli',
    'formatting',
    'github-actions',
    'labels',
    'linting',
    'markdown',
    'mypy',
    'nuitka',
    'packaging',
    'pypi',
    'python',
    'release-automation',
    'sphinx',
    'sponsorship',
    'terminal',
    'typo',
    'workflow-reusable',
    'yaml',
]
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Framework :: Sphinx',
    'Framework :: Pelican',
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Unix Shell',
    'Topic :: Documentation :: Sphinx',
    'Topic :: File Formats :: JSON',
    'Topic :: Security',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Compilers',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Quality Assurance',
    'Topic :: Software Development :: Version Control :: Git',
    'Topic :: System :: Archiving :: Packaging',
    'Topic :: System :: Installation/Setup',
    'Topic :: System :: Shells',
    'Topic :: System :: Software Distribution',
    'Topic :: Terminals',
    'Topic :: Text Processing :: Markup :: HTML',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Topic :: Utilities',
    'Typing :: Typed',
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future.
# See also discussion about upper limits at: https://iscinumpy.dev/post/bound-version-constraints/#tldr
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
    "backports.strenum >= 1.3.1 ; python_version < '3.11'",
    # boltons 25.0.0 is the first version to support Python 3.13.
    "boltons >= 25.0.0",
    # v1.2.6 fix Click compatibility issues.
    "bump-my-version >= 1.2.6",
    # Click Extra 7.0.0 renames several internals.
    "click-extra >= 7.0.0",
    # We depends on some internals changed in extra-platforms 6.0.0.
    "extra-platforms >= 6.0.0",
    # v25.0 is the first version we used when we last changed the requirement.
    "packaging >= 25.0",
    # v0.3.3 is the first version we used.
    # XXX In the future, replace py-walk with wcmatch once the latter supports gitignore files:
    # https://github.com/facelessuser/wcmatch/issues/226
    "py-walk >= 0.3.3",
    # PyDriller 2.6.0 is the first version we used when we last changed the requirement.
    "PyDriller >= 2.6",
    # v0.9.0 supports the latest metadata specifications.
    "pyproject-metadata >= 0.9.0",
    # PyYAML 6.0.3 is the first version to support Python 3.14.
    "pyyaml >= 6.0.3",
    # Tomli 2.3.0 is the first version to support Python 3.14.
    "tomli >= 2.3.0 ; python_version < '3.11'",
    # wcmatch 10.0 fix some inconsistencies in globbing and symlinks.
    "wcmatch >= 10.0",
]

# Non-runtime development dependency groups.
[dependency-groups]
test = [
    # coverage 7.11.0 is the first version to drop support for Python 3.9.
    "coverage [toml] >= 7.11.0",
    # Pytest 9.0.0 introduce support for native TOML configuration files.
    "pytest >= 9.0.0",
    # pytest-cases 3.9.0 is the first version to support Python 3.14.
    "pytest-cases >= 3.9.0",
    # pytest-cov 7.0.0 is the first version to be repackaged with pyproject-metadata.
    "pytest-cov >= 7.0.0",
    # pytest-github-actions-annotate-failures 0.3.0 is the first version to support Python 3.13.
    "pytest-github-actions-annotate-failures >= 0.3.0",
    # pytest-randomly 4.0.0 is the first version to support Python 3.14.
    "pytest-randomly >= 4.0.0",
]
typing = ["types-boltons >= 25.0.0.20250822", "types-PyYAML >= 6.0.12.9"]

[project.urls]
"Homepage" = "https://github.com/kdeldycke/workflows"
"Download" = "https://github.com/kdeldycke/workflows/releases/tag/v5.2.0"
"Changelog" = "https://github.com/kdeldycke/workflows/blob/main/changelog.md"
"Issues" = "https://github.com/kdeldycke/workflows/issues"
"Repository" = "https://github.com/kdeldycke/workflows"
"Funding" = "https://github.com/sponsors/kdeldycke"

[project.scripts]
gha-utils = "gha_utils.__main__:main"

[build-system]
requires = ["uv_build >= 0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Package is at root level, not in "./src/".
module-root = ""

# Bundle label configuration files from .github/ into the package.
# This keeps source files in .github/ for linting/formatting, while making
# them available at runtime via importlib.resources.
[tool.uv.build-backend.force-include]
# Label configuration files.
".github/labels.toml" = "gha_utils/data/labels.toml"
".github/labeller-file-based.yaml" = "gha_utils/data/labeller-file-based.yaml"
".github/labeller-content-based.yaml" = "gha_utils/data/labeller-content-based.yaml"
# Reusable workflow templates.
".github/workflows/autofix.yaml" = "gha_utils/data/workflows/autofix.yaml"
".github/workflows/autolock.yaml" = "gha_utils/data/workflows/autolock.yaml"
".github/workflows/changelog.yaml" = "gha_utils/data/workflows/changelog.yaml"
".github/workflows/debug.yaml" = "gha_utils/data/workflows/debug.yaml"
".github/workflows/docs.yaml" = "gha_utils/data/workflows/docs.yaml"
".github/workflows/labels.yaml" = "gha_utils/data/workflows/labels.yaml"
".github/workflows/lint.yaml" = "gha_utils/data/workflows/lint.yaml"
".github/workflows/release.yaml" = "gha_utils/data/workflows/release.yaml"
".github/workflows/renovate.yaml" = "gha_utils/data/workflows/renovate.yaml"
".github/workflows/tests.yaml" = "gha_utils/data/workflows/tests.yaml"

[tool.uv]
# Cooldown period: 7-day buffer before using newly released packages.
# Use a fixed date (not relative like "1 week") to prevent uv.lock timestamp churn.
# This date is auto-updated by the autofix workflow when it becomes stale.
exclude-newer = "2026-01-16T00:00:00Z"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["py_walk.*"]

[tool.pytest]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = [
    "--durations=10",
    "--cov=gha_utils",
    "--cov-branch",
    "--cov-precision=2",
    "--cov-report=term",
    "--cov-report=xml",
    # Codecov.io's test analytics requires a JUnit XML file:
    # https://docs.codecov.com/docs/test-analytics#1-output-a-junit-xml-file-in-your-ci
    "--junitxml=junit.xml",
    "--override-ini=junit_family=legacy",
]
# Make sure tests that are expected to fail do not resurrect and start working all of a sudden.
xfail_strict = true

[tool.bumpversion]
current_version = "5.2.0"
allow_dirty = true
ignore_missing_files = true

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in [project] section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update version in download URL.
filename = "./pyproject.toml"
search = 'releases/tag/v{current_version}'
replace = 'releases/tag/v{new_version}'

[[tool.bumpversion.files]]
# Update the version in Markdown changelog.
filename = "./changelog.md"
search = "## [{current_version} (unreleased)]("
replace = "## [{new_version} (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"
